# august-proxy

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT.md  Dockerfile  README.md  docker-compose.yml  install.ps1  install.sh  package-lock.json  package.json  wb_errors.txt
backend-py/: CUsersrobermypy_output.txt  _errors_anthropic.txt  _errors_remaining.txt  _errors_workbench.txt  mypy.ini  pyproject.toml  verifyAll.py  verify_all.py
backend-py/app/: __init__.py  atomic_write.py  config.py  database.py  jsonUtils.py  json_narrowing.py  main.py  typeAliases.py  type_aliases.py
backend-py/app/adapters/: anthropic.py  anthropic_sse.py  anthropic_stream_translate.py  anthropic_system.py  base.py  base.py.bak  caseConverters.py  case_converters.py  openai.py  openai_sse.py  proxyTools.py  proxy_tool_defs.py  proxy_tools.py  proxy_tools.py.bak  reasoning_policy.py  sse_format.py  stream_state.py  toolClassification.py  tool_classification.py
backend-py/app/lib/: async_subprocess.py  batched_emit.py  camel_model.py  gatewayAuth.py  gateway_auth.py  health.py  identity.py  identity.py.bak  paths.py  perf_timing.py  permissions.py  permissions.py.bak  response.py  retry.py  secrets.py  stats.py  stats.py.bak  storageKeyMigration.py  storage_key_migration.py  tokens.py
backend-py/app/models/: __init__.py  aliases.py  anthropic.py  base.py  camel_base.py  config.py  openai.py  proxy.py
backend-py/app/providers/: aiGateway.py  ai_gateway.py  ai_gateway.py.bak  aliases.py  aliases.py.bak  alibaba.py  anthropic.py  api_format.py  arcee.py  arcee.py.bak  azure.py  bedrock.py  builtin.py  cline.py  copilot.py  copilot.py.bak  custom.py  deepseek.py  deepseek.py.bak  gemini.py  gemini.py.bak  gmi.py  huggingface.py  huggingface.py.bak  kilo.py  kimi.py  kimi.py.bak  minimax.py  minimax.py.bak  minimaxCn.py  minimax_cn.py  modelResolver.py  model_resolver.py  model_resolver.py.bak  nous.py  nous.py.bak  novita.py  novita.py.bak  nvidia.py  ollamaCloud.py  (+24 more)
backend-py/app/providers/clients/: __init__.py  anthropic.py  anthropic.py.bak  base.py  bedrock.py  bedrock.py.bak  gemini.py  minimax.py  minimax.py.bak  openai.py
backend-py/app/routers/: agents.py  audit.py  aug.py  august.py  automations.py  brain.py  brainActivity.py  brainConfig.py  brain_activity.py  brain_config.py  brain_dashboard.py  browser.py  calendar.py  config.py  cron.py  curator.py  desktopAutomation.py  desktop_automation.py  exam.py  gateway.py  git.py  live.py  manage.py  mcp.py  memory.py  models.py  monitor_feature_flow.py  monitoring.py  preview.py  providers.py  proxy.py  realtime.py  security.py  service_connections.py  sessions.py  skills.py  subagent.py  terminal.py  terminalRoutes.py  terminal_routes.py  (+7 more)
backend-py/app/services/: agent_message_bus.py  aliasMappingService.py  aliasService.py  alias_mapping_service.py  alias_service.py  assetUpdater.py  asset_updater.py  augArtifactService.py  augDirectiveService.py  aug_artifact_service.py  aug_directive_service.py  augustApi.py  august_api.py  automations_schedule.py  automations_store.py  backgroundReviewService.py  background_review_service.py  blackboardService.py  blackboard_service.py  brainConfigService.py  brainEventBus.py  brain_config_service.py  brain_event_bus.py  brain_write_facade.py  cognitive_boot.py  cognitive_config.py  computer_use.py  configService.py  config_service.py  consolidationDaemon.py  consolidation_daemon.py  daemonManager.py  daemon_manager.py  dbWriter.py  db_writer.py  deltaEngine.py  delta_engine.py  desktopAutomation.py  desktopDispatch.py  desktop_automation.py  (+60 more)
backend-py/app/services/browser/: __init__.py  elementResolver.py  element_resolver.py  handlers.py  sessionManager.py  session_manager.py  snapshot.py
backend-py/app/services/gateway/: __init__.py  base.py  runner.py  sessionBridge.py  session_bridge.py
backend-py/app/services/memory/: __init__.py  autoMemory.py  auto_memory.py  backgroundReview.py  background_review.py  brainOrchestrator.py  brain_orchestrator.py  capabilities_prompt.py  contextBuilder.py  contextCompressor.py  context_builder.py  context_compressor.py  context_scrubber.py  crossSessionBridge.py  (+24 more)
backend-py/scripts/: _check_fts_query_hygiene.py  _check_phase4_indexes.py  _debug_routes.py  _diff_memory_store_conflicts.py  _fix_parametrize_names.py  _list_api_paths.py  _live_db_fingerprint.py  _merge_memory_blob_conflicts.py  _pass2_drop_camel_tables.py  _prove_fts_column_bug.py  _recover_auto_mem_conflicts.py  _split_memory_store_package.py  _spotcheck_schema.py  _verify_fts_sync.py  backfill_workbench_to_brain.py  deny_list.txt  doctor.py  extract_provider_templates.py  genPhase8.py  genProviders.py  gen_providers.py  merge_dual_schema_tables.py  migrateAutoMemories.py  migrateCoreMemory.py  migrateDbColumns.py  migrateGuidelinesToSkills.py  migrateLearnedHeuristics.py  migrate_auto_memories.py  migrate_core_memory.py  migrate_guidelines_to_skills.py  migrate_learned_heuristics.py  p0_explain_plans.py  p0_run_baselines.py  replace_any.py  smoke_live.py  snakeToCamel.py  snakeToCamelMulti.py  snake_to_camel.py
backend-py/tests/: _verify_v3_mock.py  conftest.py  testAdapters.py  testAgentRegistry.py  testAliasService.py  testAudit.py  testAugArtifact.py  testAugDirective.py  testBackgroundReview.py  testBackgroundReviewService.py  testBrainConfig.py  testBrowser.py  testClients.py  testDesktopAutomation.py  testEventLog.py  testFallbackService.py  testGatewayAuth.py  testGatewayBase.py  testGatewayTelegram.py  testGuidelineMigration.py  testHealth.py  testLogStream.py  testMcpClientAtomicWrite.py  testMemory.py  testNewRoutes.py  testObservabilityMemoryContract.py  testProviderCredentials.py  testProviders.py  testRoutes.py  testSkillCurator.py  testSkillManage.py  testSkills.py  testSubagent.py  testSubagentParallelCoordination.py  testWorkbench.py  testWorkbenchMcpTools.py  testWorkbenchQueue.py  testWorkbenchSkillsCatalogue.py  testWorkbenchToolDefinitions.py  testWorkbenchToolLoop.py  (+189 more)
frontend/desktop/src-tauri/: Cargo.toml  tauri.conf.json
(+1166 files in other folders)
