[project]
name = "august-proxy"
version = "0.1.0"
description = "August Proxy — AI model proxy and workbench"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # sqlalchemy + aiosqlite + alembic removed in Phase 0 — no ORM models exist.
    # All persistence uses memory_store.py (august_brain.sqlite) directly.
    "httpx>=0.28.0",
    "sse-starlette>=2.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.1.0",
    "playwright>=1.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "watchfiles>=1.0.0",
]
ml = [
    "sentence-transformers>=3.3.0",
    "numpy>=2.0.0",
]
desktop = [
    # Real desktop automation (screen/mouse/keyboard) — distinct from the
    # headless Playwright browser layer. Optional: install with
    # `uv sync --extra desktop` when desktop computer-use is desired.
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9; sys_platform == 'win32'",
]

[tool.setuptools.packages.find]
where = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py", "test*.py"]
python_functions = "test*"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "mypy>=1.13.0",
    "types-PyYAML",
    "types-requests",
]
