[project]
name = "august-proxy"
version = "0.1.0"
description = "August Proxy — AI model proxy and workbench"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # sqlalchemy + aiosqlite + alembic removed in Phase 0 — no ORM models exist.
    # All persistence uses memory_store.py (august_brain.sqlite) directly.
    "httpx>=0.28.0",
    "sse-starlette>=2.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.1.0",
    "playwright>=1.49.0",
    "ddgs>=9.14.0",
    "html2text>=2025.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.0",
    "watchfiles>=1.0.0",
    "mypy>=1.13.0",
    "types-PyYAML",
    "types-requests",
    "ruff>=0.9.0",
    "pre-commit>=4.6.0",
]
ml = [
    "sentence-transformers>=3.3.0",
    "numpy>=2.0.0",
]
desktop = [
    # Real desktop automation (screen/mouse/keyboard) — distinct from the
    # headless Playwright browser layer. Optional: install with
    # `uv sync --extra desktop` when desktop computer-use is desired.
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9; sys_platform == 'win32'",
]
pty = [
    "pywinpty>=2.0.0; sys_platform == 'win32'",
]
gateway = [
    # Platform bot adapters (Telegram uses httpx already in core deps).
    # Install with: uv sync --extra gateway   or   pip install -e ".[gateway]"
    "discord.py>=2.3.0",
    "slack_sdk>=3.27.0",
]

[tool.setuptools.packages.find]
where = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py", "test*.py"]
python_functions = "test*"

# Keep dependency-groups in sync with [project.optional-dependencies].dev
# so `uv sync --group dev` and `pip install -e ".[dev]"` install the same set.
[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.0",
    "watchfiles>=1.0.0",
    "mypy>=1.13.0",
    "types-PyYAML",
    "types-requests",
    "ruff>=0.9.0",
    "pre-commit>=4.6.0",
]

# uv uses backend-py/.python-version (3.12). Prefer managed interpreters so the
# project toolchain stays consistent across machines.
[tool.uv]
python-preference = "managed"

# ── Ruff (lint + format) ────────────────────────────────────────────
# Project convention (Phase 0 sign-off): Python identifiers stay camelCase.
# Therefore pep8-naming (N*) is intentionally NOT enabled.
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["app", "tests"]
extend-exclude = ["*.bak", "**/__pycache__", "august_proxy.egg-info"]

[tool.ruff.lint]
# Syntax/undefined-name safety + security (bandit) + import sorting.
# pep8-naming (N*) stays disabled — project uses camelCase by convention.
select = ["E4", "E7", "E9", "F", "S", "I"]
ignore = [
    "E501",  # line length handled by formatter / gradual cleanup
    "S101",  # assert is standard in tests
    "S108",  # /tmp paths are fine in a desktop proxy app
    "S110",  # try-except-pass is intentional in fault-tolerant proxy code
    "S112",  # try-except-continue — same rationale
    "S310",  # urllib.request.urlopen — proxy fetches arbitrary user URLs by design
    "S311",  # random.uniform for retry jitter — not cryptographic
    "S324",  # hashlib.md5 for non-crypto slug ids
    "S602",  # subprocess shell=True — automation jobs run user shell commands
    "S603",  # subprocess call — intentional for tool execution
    "S604",  # shell=True — same as S602
    "S606",  # start process — intentional for PTY/shell spawning
    "S607",  # partial exe path (git, etc.) — resolved via PATH by design
    "S608",  # f-string SQL with internally-controlled table names (not user input)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F811", "S101", "S105", "S106", "S108"]
"scripts/**" = ["E4", "F", "S"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
